--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,14 @@
-root = true;
+root = true
 
 [*]
-indent_style = space;
-indent_size = 4;
+indent_style = space
+indent_size = 4
 
 [*.nix]
-indent_size = 2;
+indent_size = 2
 
 [*.tf]
-indent_size = 2;
+indent_size = 2
 
 [*.{yml,yaml}]
-indent_size = 2;
+indent_size = 2
